# xt_tee

./: LICENSE  README.md  xt_tee.c
steps/: README  README~
steps/s002-xt_tee-1/: README  xt_tee.c
steps/s003-xt_tee-relative-timestamps/: Makefile  README  xt_tee.c
steps/s004-targeted-timestamping/: README  xt_tee.c
steps/s005-colored-timestamps/: README  output.txt  xt_tee.c
steps/s006-short-options/: README  xt_tee.c
steps/s007-help/: auto  xt_tee.c
steps/s008-version/: Makefile  README  always  output.txt  xt_tee.c
steps/s009-manpage/: README
steps/s010-install-script/: README  install_xt_tee.sh
steps/s011-cmake-basic/: CMakeLists.txt
steps/s011-cmake-basic/test/: CMakeLists.txt  test_basic.sh
steps/s013-cmake-install/: CMakeLists.txt~  xt_tee.1
steps/s014-xt_tee-cmake/: CMakeLists.txt
